--- a/.eslintignore
+++ b/.eslintignore
@@ -1,15 +1,10 @@
-*.sh
-node_modules
 *.md
-*.woff
+*.svg
 *.ttf
-.vscode
-.idea
+*.woff
 dist
-/public
-/docs
-.husky
-.local
-/bin
-/src/mock/*
-stats.html
+node_modules
+public
+Test
+dev-dist
+auto-script
