--- a/package.json
+++ b/package.json
@@ -20,19 +20,12 @@
   },
   "scripts": {
     "dev": "vite",
-    "serve": "vite",
-    "build:dev": "vue-tsc && vite build --mode development",
-    "build:test": "vue-tsc && vite build --mode test",
-    "build:pro": "vue-tsc && vite build --mode production",
-    "type:check": "vue-tsc --noEmit --skipLibCheck",
-    "preview": "pnpm build:dev && vite preview",
-    "lint:eslint": "eslint --fix --ext .js,.ts,.vue ./src",
-    "lint:prettier": "prettier --write \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
-    "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "lint:lint-staged": "lint-staged",
-    "prepare": "husky install",
-    "release": "standard-version",
-    "commit": "git add -A && czg && git push"
+    "build": "vite build && node auto-script/update-time.js",
+    "type-check": "vue-tsc",
+    "eslint": "eslint \"src/**/*.{vue,ts}\" --fix",
+    "stylelint": "stylelint --fix \"src/**/*.{vue,scss}\"",
+    "prettier": "prettier --fix --write \"src/**/*.{vue,ts,scss}\"",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -59,25 +52,24 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@rushstack/eslint-patch": "^1.10.3",
     "@types/md5": "^2.3.5",
     "@types/nprogress": "^0.2.3",
     "@types/qs": "^6.9.15",
     "@types/sortablejs": "^1.15.8",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "autoprefixer": "^10.4.19",
-    "cz-git": "1.9.2",
-    "czg": "^1.9.2",
-    "eslint": "^8.57.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
     "postcss": "^8.4.38",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.2",
@@ -95,31 +87,10 @@
     "unplugin-vue-setup-extend-plus": "^1.0.1",
     "vite": "^5.3.2",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.3.5",
     "vue-tsc": "^2.0.22"
-  },
-  "engines": {
-    "node": ">=16.18.0"
-  },
-  "browserslist": {
-    "production": [
-      "> 1%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-git"
-    }
   }
 }
